2005-10-24  Eli Zaretskii  <eliz@gnu.org>

	* pgg-def.el:
	* pgg-gpg.el:
	* pgg-parse.el:
	* pgg-pgp.el:
	* pgg-pgp5.el:
	* pgg.el: Move to the parent lisp directory.

2005-10-23  Chong Yidong  <cyd@stupidchicken.com>

	* gnus-sum.el (gnus-ignored-from-addresses): Handle case where
	user-mail-name is an empty string.

2005-10-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-default-adaptive-score-alist): Set defaults
	depending on gnus-score-decay-constant.

2005-10-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnslashdot.el (nnslashdot-request-article)
	(nnslashdot-retrieve-headers-1): Update to new HTML.

2005-10-23  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-gssapi-program): Align command line parameters
	with latest GNU SASL.
	(imap-gssapi-open): Ignore 'Trying ...' messages from GNU SASL.

2005-10-20  Hiroshi Fujishima  <hiroshi.fujishima@gmail.com>  (tiny change)

	* mail-source.el (mail-source-fetch-pop): Require pop3.
	(mail-source-check-pop): Ditto.

2005-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-decode-encoded-words): Fix the handling of
	errors.

2005-10-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-treat-strip-trailing-blank-lines)
	(gnus-treat-strip-leading-blank-lines): Improve doc string.

	* message.el (message-tool-bar-local-item-from-menu): Fix comment.

2005-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-allow-incomplete-encoded-text): New variable.
	(rfc2047-charset-to-coding-system): New function.
	(rfc2047-decode-encoded-words): New function.
	(rfc2047-decode-region): Use them.
	(rfc2047-decode-cte): Remove.
	(rfc2047-parse-and-decode): Remove.
	(rfc2047-decode): Remove.

2005-10-15  Kenichi Handa  <handa@m17n.org>

	* rfc2047.el (rfc2047-decode-cte): New function.
	(rfc2047-decode-region): Change the way to decode successive
	encoded-words: decode B- or Q-encoding in each encoded-word,
	concatenate them, and decode it as charset.
