@@ -1,3 +1,8 @@
+2005-10-30  Chong Yidong  <cyd@stupidchicken.com>
+
+	* imap.el (imap-open): Handle case where buffer is a buffer
+	object.
+
 2005-10-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* pgg-def.el:
